--- a/wiki/SoftwareTips.wiki
+++ b/wiki/SoftwareTips.wiki
@@ -43,6 +43,29 @@ Once you have this working, you can log into the console again and add users.
   * Several usermasks (security levels) are defined in the code. A default of 254 will work for getting started.
   * You can store up to 200 users in eeprom on the Arduino. Users are numbered 0..199.
   * It's recommended that you create a spreadsheet of your users, as the software will replace the tage info with asteriks unless debugging is enabled.
+
+=Version 1.40 Features=
+==Add users at the reader==
+You can now add users to the system with a reader that has a key pad attached.  In order to do so you must be listed with an admin user mask, eg: a user that is hard coded as staff, or has a usermask of 5.
+
+#Swipe key card that is to be provisioned (should have an invalid key read)
+#Swipe staff key (usermask 5 or hard coded user)
+#Press 666, Enter. This adds the fob to the user list from the last invalid fob read.
+#Swipe new fob, and it should be added to the userlist.
+
+==Side Door emergency code==
+The side door read (reader2) has a back door code in the event that someone gets completely locked out of the space- they can call us and we can give them the code over the phone.  This is done by using the user 199 as a code for the side door.  Just enter in a six digit number in the users "keyfob" code.  Then when the reader see this code it allows access.  Once this is used, you must change the number.
+
+#At door2 reader press 666
+#Enter the 6 digit number that is assigned to user 199
+#Profit.
+
+== Date / Time update==
+You can update the date/time from the serial port.
+
+==Using the keypad as doorbell==
+As we made a loop for detecting card reads vs user button pushes, we setup the Enter key on the keypad to ring the bell inside the space.  We still need to put up a sign, but it's a start.
+
 ==Customization==
   * You can customize the reader logic, keypad commands, timeout values and alarm functions as needed. Samples are included in the code. Be sure to make frequent backups.
   * There are about 20 bytes of unused eeprom space, 16KB of flash and about 650-700 bytes of free memory when an Atmega 328-based Arduino is used. Room for additional features does exist.
