--- a/wiki/RaspberryPiSetup.wiki
+++ b/wiki/RaspberryPiSetup.wiki
@@ -1,4 +1,4 @@
-#summary Linux monitoring system using a Raspberry Pi and debian
+#summary Linux monitoring system using the Raspberry Pi and debian install
 #labels Phase-Deploy
 
 = How to configure a Raspberry Pi for monitoring =
@@ -18,6 +18,7 @@ Make sure you run _raspi-config_, and expand your file system to fill the entire
 
 To install _rpi-update_:
 {{{
+sudo apt-get update
 sudo wget http://goo.gl/1BOfJ -O /usr/bin/rpi-update && sudo chmod +x /usr/bin/rpi-update
 }}}
 
